# APAS-AI

./: README.md  RustDictionary.md  RustSemantics.txt
apas-ai/: .cursorignore  .gitignore  .rustfmt.toml  Cargo.toml  Cargo.toml.backup  Cargo.toml.backup2  PATCH_NOTES.md  README.md  TODO  TODO.md  TODOs  TRAIT_IMPL_STANDALONE_RESULTS.md  add_macro_imports.py  benchmarks_success.txt  fix_arrayseq_macro.py  method_coverage.txt  method_coverage_complete.txt  move_macro_deadcode_simple.py  move_macro_deadcode_tests.py  rust-toolchain.toml  rustfmt.toml  rusticate-fix-stub-delegation.txt  rusty-tags.emacs  test  working_benchmark_results.txt
apas-ai/.config/: nextest.toml
apas-ai/.cursor/: settings.json
apas-ai/CodeReviews/: AntiPatternStubs_ExecutionSummary.md  AntiPatternStubs_Report.md  BenchmarkTimingAudit.txt  BenchmarkTimingAuditFinal.txt  Chap03.txt  Chap06.txt  Chap11.txt  Chap12.txt  Chap18.txt  Chap19.txt  Chap21.txt  Chap23.txt  Chap35.txt  Chap36.txt  Chap37.txt  Chap40.txt  Chap41.txt  Chap47.txt  Chap50.txt  Chap61_Implementation.txt  Chap62_Implementation.txt  Chap63_Implementation.txt  Chap64_Implementation.txt  Chap65_Implementation.txt  Chap66_Implementation.txt  MacroLocationScan.txt  SlowBenchmarkFixes.txt  TODO
apas-ai/analyses/: AVLTreeSeqMtPer_parallelism.txt  Chap37_Mt_Parallelism_Analysis.txt  Chap37_Parallelization_Plan.txt  README.md  TODO_test_coverage.txt  apas_rules_automation_analysis.md  benchmarks_success.txt  benchmarks_timed_out.txt  clippy.txt  clone_test_result.md  coverage_batch2_summary.txt  coverage_by_file.txt  coverage_improvements_2025.txt  coverage_improvements_plan2.txt  coverage_improvements_table.txt  coverage_plan_next20.txt  coverage_plan_revised.txt  coverage_summary.txt  coverage_tool_comparison.md  coverage_with_no_inlining.md  disabling_inlining_for_coverage.md  false_positives_report_for_tool_tuning.txt  final_coverage_summary.md  forwarding_wrappers.txt  how_to_find_missing_functions.md  inherent_impl_cleanup_summary.txt  inherent_impls_list.txt  labundirgraph_clone_impact.md  labundirgraph_steph_analysis.md  long_benchmark_hunt.txt  long_benchmark_hunt.txt.20s  long_benchmark_hunt.txt.40s  mathseq_coverage_analysis.md  mathseq_tests_added.md  modules_without_types.txt  naming_conventions_report.txt  notparallel.txt  pareto.txt  remaining_test_gaps.md  review-test-functions.txt  (+10 more)
apas-ai/attic/: 06_TestDoublyLinkedListSeq.rs  07_TestDoublyLinkedListSeqChap18.rs  08_TestDoublyLinkedListSeqChap19.rs  09_TestSinglyLinkedListSeq.rs  10_TestSinglyLinkedListSeqChap18.rs  AVLTree2Seq.rs.old  AVLTreeSeq.rs  AVLTreeSeq.rs.old  AVLTreeSeqStEph.rs  AVLTreeSeqStEphChap18_prev2.rs  AVLTreeSeqStEphChap19_prev2.rs  AVLTreeSeqStEph_prev2.rs  AVLTreeSeqStPerChap18_prev2.rs  AVLTreeSeqStPerChap19_prev2.rs  AVLTreeSeqStPer_prev2.rs  AVLTreeSetMtEph.rs  AVLTreeSetStEph.rs  ArraySeq.rs  ArraySeqChap18.rs  ArraySeqChap19.rs  ArraySeqMtEph.base.rs  ArraySeqMtEph19.base.rs  ArraySeqMtEphChap18.base.rs  ArraySeqMtEphChap18.rs  ArraySeqMtEphSlice.base.rs  ArraySeqMtPer.base.rs  ArraySeqMtPer19.base.rs  ArraySeqMtPerChap18.base.rs  ArraySeqMtPerChap18.rs  ArraySeqStEph.base.rs  ArraySeqStEph19.base.rs  ArraySeqStEphChap18.base.rs  ArraySeqStEphChap18.rs  ArraySeqStPer.base.rs  ArraySeqStPer19.base.rs  ArraySeqStPerChap18.base.rs  ArraySeqStPerChap18.rs  ArraySetEnumMtEph.rs  ArraySetEnumStEph.rs  Chap52_FULL_PLAN.md  (+13 more)
apas-ai/benches/: BenchAVLTreeSeqEph.rs  BenchAVLTreeSeqEphChap18.rs  BenchAVLTreeSeqEphChap19.rs  BenchAVLTreeSeqPer.rs  BenchAVLTreeSeqPerChap18.rs  BenchAVLTreeSeqPerChap19.rs  BenchAVLTreeSeqStEph.rs  BenchAVLTreeSeqStEphChap18.rs  BenchAVLTreeSeqStEphChap19.rs  BenchAVLTreeSeqStPer.rs  BenchAVLTreeSeqStPerChap18.rs  BenchAVLTreeSeqStPerChap19.rs  BenchArraySeq.rs  BenchArraySeqEph.rs  BenchArraySeqEphChap18.rs  BenchArraySeqEphChap19.rs  BenchArraySeqMtPer.rs  BenchArraySeqMtPerChap18.rs  BenchArraySeqMtPerChap19.rs  BenchArraySeqPer.rs  BenchArraySeqPerChap18.rs  BenchArraySeqPerChap19.rs  BenchArraySeqStEph.rs  BenchArraySeqStEphChap18.rs  BenchArraySeqStEphChap19.rs  BenchArraySeqStPer.rs  BenchArraySeqStPerChap18.rs  BenchArraySeqStPerChap19.rs  BenchBSTAVLMtEph.rs  BenchBSTAVLStEph.rs  BenchBSTBBAlphaMtEph.rs  BenchBSTBBAlphaStEph.rs  BenchBSTEph.rs  BenchBSTParaMtEph.rs  BenchBSTParaStEph.rs  BenchBSTParaTreapMtEph.rs  BenchBSTPlainMtEph.rs  BenchBSTPlainStEph.rs  BenchBSTRBMtEph.rs  BenchBSTRBStEph.rs  (+39 more)
apas-ai/chatlogs/: AlgorithmicAnalysis.txt  AllFileChecklistReview.txt  AllFileChecklistReview_CONTINUATION.txt  Chap26_Implementation_Summary.txt  Chap47clean_Creation_Log.md  Chap57_Implementation_Summary.md  Chap58_Implementation_Summary.md  InitialSetup.md  OrderingModules.txt  WhereRules.md  all.tree.files.txt  benchmark_coverage_analysis.md  benchmark_timing_summary.md  benchmark_upgrade_plan.md  benchmark_upgrade_plan_revised.md  codex.src.reviews.clean.txt  codex.src.reviews.txt  codex.test.reviews.txt  comprehensive_benchmark_coverage_analysis.md  detailed_benchmark_coverage_matrix.md  files.to.move.into.chap.dirs.txt  files.with.redundant.chap.names.txt  macrorenames.text  unreviewed.src.files.claude.txt
apas-ai/checklists/: APASRulesChecklist.md  PostPlanChecklist.md  PrePlanChecklist.md
apas-ai/codereviews/: AntiPatternStubs.txt  AsterixImports.txt  BenchmarkCleanUps.txt  Chap06.txt  Chap12.txt  Chap17.txt  Chap36.txt  Chap37.txt  Chap38.txt  Chap39.txt  Chap42.txt  Chap43.txt  Chap45.txt  Chap47.txt  Chap49.txt  Chap51.txt  Chap52.txt  Chap53.txt  Chap54.txt  Chap55.txt  Chap56.txt  Chap57.txt  Chap58.txt  Chap59.txt  Chap60.txt  CheckForCombinedBenchmarks.txt  CheckForTestsAndBenchmarks.txt  ExportScan.txt  FactoryPattern.txt  ImportCleanup.txt  MacrosInModules.txt  MissingAPASWorkSpan.txt  ModuleCleanup.txt  MultipleImports.txt  Plan.txt  TODO  TestCoverage.txt  badimpls.txt
apas-ai/coverage/: PHASES_6_10_FINAL_SUMMARY.txt  actually_sorted_by_coverage.txt  all_tests.txt  coverage.txt  coverage_full.txt  coverage_sorted_by_function_high_to_low.txt  coverage_sorted_by_region_high_to_low.txt  generate_tests.py  (+12 more)
(+2656 files in other folders)
