[package]
name = "apas-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0"
ordered-float = "4.2"
rand = "0.9.2"
rayon = "1.11.0"
tree_collections = "0.1.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lints.rust]
non_snake_case = "allow"
non_upper_case_globals = "allow"
unused_imports = "allow"
dead_code = "allow"

[workspace]
members = [ "." ]

[[bench]]
name = "BenchFibonacciMt"
path = "benches/Chap11/BenchFibonacciMt.rs"
harness = false

[[bench]]
name = "BenchArraySeqStEph"
path = "benches/Chap19/BenchArraySeqStEph.rs"
harness = false

## DoublyLinkedList benchmarks moved to src/attic

[[bench]]
name = "BenchMathSeq"
path = "benches/Chap17/BenchMathSeq.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSeqStPer"
path = "benches/Chap37/BenchAVLTreeSeqStPer.rs"
harness = false
## SharedSinglyLinkedList removed

[[bench]]
name = "BenchArraySeqStEphChap18"
path = "benches/Chap18/BenchArraySeqStEphChap18.rs"
harness = false

[[bench]]
name = "BenchArraySeqStPer"
path = "benches/Chap19/BenchArraySeqStPer.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSeqStPerChap19"
path = "benches/Chap37/BenchAVLTreeSeqStPer19.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSeqStPerChap18"
path = "benches/Chap37/BenchAVLTreeSeqStPer18.rs"

harness = false

[[bench]]
name = "BenchArraySeqMtPer"
path = "benches/Chap19/BenchArraySeqMtPer.rs"
harness = false

[[bench]]
name = "BenchArraySeqMtPerChap18"
path = "benches/Chap19/BenchArraySeqMtPer18.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSeqStEph"
path = "benches/Chap37/BenchAVLTreeSeqStEph.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSeqStEphChap18"
path = "benches/Chap37/BenchAVLTreeSeqStEph18.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSeqStEphChap19"
path = "benches/Chap37/BenchAVLTreeSeqStEph19.rs"
harness = false

[[bench]]
name = "BenchChapter36St"
path = "benches/Chap36/BenchChapter36St.rs"
harness = false

[[bench]]
name = "BenchChapter36Mt"
path = "benches/Chap36/BenchChapter36Mt.rs"
harness = false

[[bench]]
name = "BenchChapter26Mt"
path = "benches/Chap26/BenchChapter26Mt.rs"
harness = false

[[bench]]
name = "BenchBSTPlainStEph"
path = "benches/Chap37/BenchBSTPlainStEph.rs"
harness = false

[[bench]]
name = "BenchBSTAVLStEph"
path = "benches/Chap37/BenchBSTAVLStEph.rs"
harness = false

[[bench]]
name = "BenchBSTRBStEph"
path = "benches/Chap37/BenchBSTRBStEph.rs"
harness = false

[[bench]]
name = "BenchBSTBBAlphaStEph"
path = "benches/Chap37/BenchBSTBBAlphaStEph.rs"
harness = false

[[bench]]
name = "BenchBSTTreapStEph"
path = "benches/Chap39/BenchBSTTreapStEph.rs"
harness = false

[[bench]]
name = "BenchBSTSplayStEph"
path = "benches/Chap37/BenchBSTSplayStEph.rs"
harness = false
[[bench]]
name = "BenchBSTPlainMtEph"
path = "benches/Chap37/BenchBSTPlainMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTAVLMtEph"
path = "benches/Chap37/BenchBSTAVLMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTRBMtEph"
path = "benches/Chap37/BenchBSTRBMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTBBAlphaMtEph"
path = "benches/Chap37/BenchBSTBBAlphaMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTTreapMtEph"
path = "benches/Chap39/BenchBSTTreapMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTSplayMtEph"
path = "benches/Chap37/BenchBSTSplayMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTSetMtEph"
path = "benches/Chap37/BenchBSTSetMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTParaTreapMtEph"
path = "benches/Chap39/BenchBSTParaTreapMtEph.rs"
harness = false

[[bench]]
name = "BenchInsertionSortSt"
path = "benches/Chap03/BenchInsertionSortSt.rs"
harness = false


[[bench]]
name = "BenchMappingStEphChap5_5"
path = "benches/Chap05/BenchMappingStEph.rs"
harness = false

[[bench]]
name = "BenchDirGraphStEph"
path = "benches/Chap06/BenchDirGraphStEph.rs"
harness = false

[[bench]]
name = "BenchUnDirGraphStEph"
path = "benches/Chap06/BenchUnDirGraphStEph.rs"
harness = false

[[bench]]
name = "BenchWeightedDirGraphMtEphFloat"
path = "benches/Chap06/BenchWeightedDirGraphMtEphFloat.rs"
harness = false

[[bench]]
name = "BenchWeightedDirGraphMtEphInt"
path = "benches/Chap06/BenchWeightedDirGraphMtEphInt.rs"
harness = false

[[bench]]
name = "BenchWeightedDirGraphStEphFloat"
path = "benches/Chap06/BenchWeightedDirGraphStEphFloat.rs"
harness = false

[[bench]]
name = "BenchWeightedDirGraphStEphInt"
path = "benches/Chap06/BenchWeightedDirGraphStEphInt.rs"
harness = false

[[bench]]
name = "BenchWeightedUnDirGraphMtEphFloat"
path = "benches/Chap06/BenchWeightedUnDirGraphMtEphFloat.rs"
harness = false

[[bench]]
name = "BenchWeightedUnDirGraphMtEphInt"
path = "benches/Chap06/BenchWeightedUnDirGraphMtEphInt.rs"
harness = false

[[bench]]
name = "BenchWeightedUnDirGraphStEphFloat"
path = "benches/Chap06/BenchWeightedUnDirGraphStEphFloat.rs"
harness = false

[[bench]]
name = "BenchWeightedUnDirGraphStEphInt"
path = "benches/Chap06/BenchWeightedUnDirGraphStEphInt.rs"
harness = false

[[bench]]
name = "BenchExercise12_1"
path = "benches/Chap12/BenchExercise12_1.rs"
harness = false

[[bench]]
name = "BenchExercise12_2"
path = "benches/Chap12/BenchExercise12_2.rs"
harness = false

[[bench]]
name = "BenchExercise12_5"
path = "benches/Chap12/BenchExercise12_5.rs"
harness = false

[[bench]]
name = "BenchBSTParaStEph"
path = "benches/Chap38/BenchBSTParaStEph.rs"
harness = false

[[bench]]
name = "BenchBBTStEph"
path = "benches/Chap23/BenchBBTStEph.rs"
harness = false

[[bench]]
name = "BenchPrimTreeSeqSt"
path = "benches/Chap23/BenchPrimTreeSeqSt.rs"
harness = false

[[bench]]
name = "BenchLabDirGraphStEph"
path = "benches/Chap06/BenchLabDirGraphStEph.rs"
harness = false

[[bench]]
name = "BenchLabUnDirGraphStEph"
path = "benches/Chap06/BenchLabUnDirGraphStEph.rs"
harness = false

[[bench]]
name = "BenchSetStEph"
path = "benches/Chap05/BenchSetStEph.rs"
harness = false

[[bench]]
name = "BenchRelationStEph"
path = "benches/Chap05/BenchRelationStEph.rs"
harness = false

[[bench]]
name = "BenchBSTSetTreapMtEph"
path = "benches/Chap39/BenchBSTSetTreapMtEph.rs"
harness = false

[[bench]]
name = "BenchArraySeq"
path = "benches/Chap18/BenchArraySeq.rs"
harness = false

[[bench]]
name = "BenchArraySeqMtEph"
path = "benches/Chap18/BenchArraySeqMtEph.rs"
harness = false




# Test files in chapter subdirectories
[[test]]
name = "TestInsertionSortSt"
path = "tests/Chap03/TestInsertionSortSt.rs"

[[test]]
name = "TestSetStEph"
path = "tests/Chap05/TestSetStEph.rs"

[[test]]
name = "TestRelationStEph"
path = "tests/Chap05/TestRelationStEph.rs"

[[test]]
name = "TestMappingStEph"
path = "tests/Chap05/TestMappingStEph.rs"

[[test]]
name = "TestDirGraphStEph"
path = "tests/Chap06/TestDirGraphStEph.rs"

[[test]]
name = "TestUnDirGraphStEph"
path = "tests/Chap06/TestUnDirGraphStEph.rs"

[[test]]
name = "TestLabDirGraphStEph"
path = "tests/Chap06/TestLabDirGraphStEph.rs"

[[test]]
name = "TestLabUnDirGraphStEph"
path = "tests/Chap06/TestLabUnDirGraphStEph.rs"

[[test]]
name = "TestDirGraphMtEph"
path = "tests/Chap06/TestDirGraphMtEph.rs"

[[test]]
name = "TestLabDirGraphMtEph"
path = "tests/Chap06/TestLabDirGraphMtEph.rs"

[[test]]
name = "TestLabUnDirGraphMtEph"
path = "tests/Chap06/TestLabUnDirGraphMtEph.rs"

[[test]]
name = "TestUnDirGraphMtEph"
path = "tests/Chap06/TestUnDirGraphMtEph.rs"

[[test]]
name = "TestFibonacciMt"
path = "tests/Chap11/TestFibonacciMt.rs"

[[test]]
name = "TestWeightedDirGraphMtEphFloat"
path = "tests/Chap06/TestWeightedDirGraphMtEphFloat.rs"

[[test]]
name = "TestWeightedDirGraphMtEphInt"
path = "tests/Chap06/TestWeightedDirGraphMtEphInt.rs"

[[test]]
name = "TestWeightedUnDirGraphMtEphFloat"
path = "tests/Chap06/TestWeightedUnDirGraphMtEphFloat.rs"

[[test]]
name = "TestWeightedUnDirGraphMtEphInt"
path = "tests/Chap06/TestWeightedUnDirGraphMtEphInt.rs"


[[test]]
name = "TestArraySeqMtEphSlice"
path = "tests/Chap19/TestArraySeqMtEphSlice.rs"

[[test]]
name = "TestMathSeq"
path = "tests/Chap18/TestMathSeq.rs"

[[test]]
name = "TestArraySeqStPerChap19"
path = "tests/Chap19/TestArraySeqStPerChap19.rs"

[[test]]
name = "TestArraySeqStPerChap18"
path = "tests/Chap18/TestArraySeqStPerChap18.rs"

[[test]]
name = "TestArraySeqStPerChap19_Advanced"
path = "tests/Chap19/TestArraySeqStPerChap19_Advanced.rs"

[[test]]
name = "TestArraySeqStEphChap19"
path = "tests/Chap19/TestArraySeqStEphChap19.rs"

[[test]]
name = "TestArraySeqStEphChap18"
path = "tests/Chap18/TestArraySeqStEphChap18.rs"

[[test]]
name = "TestArraySeqStEphChap19_Advanced"
path = "tests/Chap19/TestArraySeqStEphChap19_Advanced.rs"

[[test]]
name = "TestArraySeqMtPerChap19"
path = "tests/Chap19/TestArraySeqMtPerChap19.rs"

[[test]]
name = "TestArraySeqMtPerChap18"
path = "tests/Chap18/TestArraySeqMtPerChap18.rs"

[[test]]
name = "TestArraySeqMtPerChap19_Advanced"
path = "tests/Chap19/TestArraySeqMtPerChap19_Advanced.rs"

[[test]]
name = "TestArraySeqMtEph"
path = "tests/Chap19/TestArraySeqMtEph.rs"

[[test]]
name = "TestAVLTreeSeqStPer"
path = "tests/Chap37/TestAVLTreeSeqStPer.rs"

[[test]]
name = "TestAVLTreeSeqStPerChap18"
path = "tests/Chap37/TestAVLTreeSeqStPer18.rs"

[[test]]
name = "TestAVLTreeSeqStPerChap19"
path = "tests/Chap37/TestAVLTreeSeqStPer19.rs"

[[test]]
name = "TestAVLTreeSeqStEphChap37"
path = "tests/Chap37/TestAVLTreeSeqStEphChap37.rs"

[[test]]
name = "TestAVLTreeSeqStEph18"
path = "tests/Chap37/TestAVLTreeSeqStEph18.rs"

[[test]]
name = "TestAVLTreeSeqStEphChap37_Advanced"
path = "tests/Chap37/TestAVLTreeSeqStEphChap37_Advanced.rs"

[[test]]
name = "TestAVLTreeSeq"
path = "tests/Chap37/TestAVLTreeSeq.rs"

[[test]]
name = "TestBSTAVLStEph"
path = "tests/Chap37/TestBSTAVLStEph.rs"

[[test]]
name = "TestBSTRBStEph"
path = "tests/Chap37/TestBSTRBStEph.rs"

[[test]]
name = "TestBSTBBAlphaStEph"
path = "tests/Chap37/TestBSTBBAlphaStEph.rs"

[[test]]
name = "TestBSTSplayStEph"
path = "tests/Chap37/TestBSTSplayStEph.rs"

[[test]]
name = "TestBSTMtEph"
path = "tests/Chap37/TestBSTMtEph.rs"

[[test]]
name = "TestBSTSetMtEph"
path = "tests/Chap37/TestBSTSetMtEph.rs"

[[test]]
name = "TestBSTParaMtEph"
path = "tests/Chap38/TestBSTParaMtEph.rs"

[[test]]
name = "TestBSTParaStEph"
path = "tests/Chap38/TestBSTParaStEph.rs"

[[test]]
name = "TestLinkedListStEphChap18"
path = "tests/Chap18/TestLinkedListStEphChap18.rs"

[[test]]
name = "TestLinkedListStPerChap18_Advanced"
path = "tests/Chap18/TestLinkedListStPerChap18_Advanced.rs"

[[test]]
name = "TestLinkedListStEph19"
path = "tests/Chap18/TestLinkedListStEph19.rs"

[[test]]
name = "TestLinkedListStPer19"
path = "tests/Chap18/TestLinkedListStPer19.rs"

[[bench]]
name = "BenchLinkedListStEph"
path = "benches/Chap18/BenchLinkedListStEph.rs"
harness = false

[[bench]]
name = "BenchLinkedListStPer"
path = "benches/Chap18/BenchLinkedListStPer.rs"
harness = false

[[bench]]
name = "BenchLinkedListStEph19"
path = "benches/Chap18/BenchLinkedListStEph19.rs"
harness = false

[[bench]]
name = "BenchLinkedListStPer19"
path = "benches/Chap18/BenchLinkedListStPer19.rs"
harness = false

# Chapter 36 tests
[[test]]
name = "TestChapter36St"
path = "tests/Chap36/TestChapter36St.rs"

[[test]]
name = "TestChapter36Mt"
path = "tests/Chap36/TestChapter36Mt.rs"

[[test]]
name = "TestChapter36MtSlice"
path = "tests/Chap36/TestChapter36MtSlice.rs"

# Chapter 39 tests
[[test]]
name = "TestBSTTreapStEph"
path = "tests/Chap39/TestBSTTreapStEph.rs"

[[test]]
name = "TestBSTParaTreapMtEph"
path = "tests/Chap39/TestBSTParaTreapMtEph.rs"

[[test]]
name = "TestBSTSetTreapMtEph"
path = "tests/Chap39/TestBSTSetTreapMtEph.rs"


# Chapter 12 tests
[[test]]
name = "TestExercise12_1"
path = "tests/Chap12/TestExercise12_1.rs"

[[test]]
name = "TestExercise12_2"
path = "tests/Chap12/TestExercise12_2.rs"

[[test]]
name = "TestExercise12_5"
path = "tests/Chap12/TestExercise12_5.rs"

# Chapter 21 tests
[[test]]
name = "TestAlgorithm_21_1"
path = "tests/Chap21/TestAlgorithm_21_1.rs"

[[test]]
name = "TestAlgorithm_21_2"
path = "tests/Chap21/TestAlgorithm_21_2.rs"

[[test]]
name = "TestAlgorithm_21_6"
path = "tests/Chap21/TestAlgorithm_21_6.rs"

[[test]]
name = "TestExercise_21_5"
path = "tests/Chap21/TestExercise_21_5.rs"

[[test]]
name = "TestExercise_21_6"
path = "tests/Chap21/TestExercise_21_6.rs"

[[test]]
name = "TestExercise_21_7"
path = "tests/Chap21/TestExercise_21_7.rs"

[[test]]
name = "TestExercise_21_8"
path = "tests/Chap21/TestExercise_21_8.rs"

[[test]]
name = "TestAlgorithm_21_5"
path = "tests/Chap21/TestAlgorithm_21_5.rs"

[[test]]
name = "TestProblem_21_3"
path = "tests/Chap21/TestProblem_21_3.rs"

[[test]]
name = "TestProblem_21_4"
path = "tests/Chap21/TestProblem_21_4.rs"

[[test]]
name = "TestProblem_21_1"
path = "tests/Chap21/TestProblem_21_1.rs"

# Additional missing test files
[[test]]
name = "TestTypes"
path = "tests/TestTypes.rs"

[[test]]
name = "TestArraySeqMacro"
path = "tests/Chap18/TestArraySeqMacro.rs"

[[test]]
name = "TestLinkedListStPerChap18"
path = "tests/Chap18/TestLinkedListStPerChap18.rs"

[[test]]
name = "TestLinkedListStEphChap18_Advanced"
path = "tests/Chap18/TestLinkedListStEphChap18_Advanced.rs"


[[test]]
name = "TestArraySeqStPerMacro"
path = "tests/Chap18/TestArraySeqStPerMacro.rs"

[[test]]
name = "TestArraySeqStEphMacro"
path = "tests/Chap18/TestArraySeqStEphMacro.rs"



[[test]]
name = "TestArraySeqMtEphChap18"
path = "tests/Chap18/TestArraySeqMtEphChap18.rs"

[[test]]
name = "TestPrimTreeSeqSt"
path = "tests/Chap23/TestPrimTreeSeqSt.rs"

[[test]]
name = "TestExercise_21_9"
path = "tests/Chap21/TestExercise_21_9.rs"

[[test]]
name = "TestBBTStEph"
path = "tests/Chap23/TestBBTStEph.rs"

# Chapter 40: Augmenting Binary Search Trees

[[bench]]
name = "BenchBSTKeyValueStEph"
path = "benches/Chap40/BenchBSTKeyValueStEph.rs"
harness = false

[[bench]]
name = "BenchBSTSizeStEph"
path = "benches/Chap40/BenchBSTSizeStEph.rs"
harness = false

[[bench]]
name = "BenchBSTReducedStEph"
path = "benches/Chap40/BenchBSTReducedStEph.rs"
harness = false

[[test]]
name = "TestBSTKeyValueStEph"
path = "tests/Chap40/TestBSTKeyValueStEph.rs"

[[test]]
name = "TestBSTSizeStEph"
path = "tests/Chap40/TestBSTSizeStEph.rs"

[[test]]
name = "TestBSTReducedStEph"
path = "tests/Chap40/TestBSTReducedStEph.rs"

[[test]]
name = "TestArraySetStEph"
path = "tests/Chap41/TestArraySetStEph.rs"

[[test]]
name = "TestArraySetEnumMtEph"
path = "tests/Chap41/TestArraySetEnumMtEph.rs"

[[test]]
name = "TestAVLTreeSetStEph"
path = "tests/Chap41/TestAVLTreeSetStEph.rs"

[[test]]
name = "TestAVLTreeSetStPer"
path = "tests/Chap41/TestAVLTreeSetStPer.rs"

[[test]]
name = "TestAVLTreeSetMtPer"
path = "tests/Chap41/TestAVLTreeSetMtPer.rs"

[[test]]
name = "TestAVLTreeSetMtEph"
path = "tests/Chap41/TestAVLTreeSetMtEph.rs"

[[test]]
name = "TestExample41_3"
path = "tests/Chap41/TestExample41_3.rs"

[[test]]
name = "TestTableStPer"
path = "tests/Chap42Claude/TestTableStPer.rs"

[[test]]
name = "TestTableStEph"
path = "tests/Chap42Claude/TestTableStEph.rs"

[[test]]
name = "TestTableMtEph"
path = "tests/Chap42Claude/TestTableMtEph.rs"

[[test]]
name = "TestExample42_1"
path = "tests/Chap42Claude/TestExample42_1.rs"

[[test]]
name = "TestOrderedSetStPer"
path = "tests/Chap43Claude/TestOrderedSetStPer.rs"

[[test]]
name = "TestOrderedSetStEph"
path = "tests/Chap43Claude/TestOrderedSetStEph.rs"

[[test]]
name = "TestOrderedSetMtEph"
path = "tests/Chap43Claude/TestOrderedSetMtEph.rs"

[[test]]
name = "TestOrderedTableStPer"
path = "tests/Chap43Claude/TestOrderedTableStPer.rs"

[[test]]
name = "TestOrderedTableStEph"
path = "tests/Chap43Claude/TestOrderedTableStEph.rs"

[[test]]
name = "TestOrderedTableMtEph"
path = "tests/Chap43Claude/TestOrderedTableMtEph.rs"

[[test]]
name = "TestExample43_1"
path = "tests/Chap43Claude/TestExample43_1.rs"

[[test]]
name = "TestAdvancedLinearProbing"
path = "tests/Chap47/TestAdvancedLinearProbing.rs"

[[test]]
name = "TestAdvancedQuadraticProbing"
path = "tests/Chap47/TestAdvancedQuadraticProbing.rs"

[[test]]
name = "TestAdvancedDoubleHashing"
path = "tests/Chap47/TestAdvancedDoubleHashing.rs"

[[test]]
name = "TestClusteringAnalysis"
path = "tests/Chap47/TestClusteringAnalysis.rs"

[[test]]
name = "TestProbeSequenceExamples"
path = "tests/Chap47/TestProbeSequenceExamples.rs"


[[bench]]
name = "BenchArraySetStEph"
path = "benches/Chap41/BenchArraySetStEph.rs"
harness = false

[[bench]]
name = "BenchArraySetEnumMtEph"
path = "benches/Chap41/BenchArraySetEnumMtEph.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSetStEph"
path = "benches/Chap41/BenchAVLTreeSetStEph.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSetStPer"
path = "benches/Chap41/BenchAVLTreeSetStPer.rs"
harness = false

[[bench]]
name = "BenchTableStPer"
path = "benches/Chap42Claude/BenchTableStPer.rs"
harness = false

[[bench]]
name = "BenchTableStEph"
path = "benches/Chap42Claude/BenchTableStEph.rs"
harness = false

[[bench]]
name = "BenchTableMtEph"
path = "benches/Chap42Claude/BenchTableMtEph.rs"
harness = false

# [[bench]]
# name = "BenchOrderedSetStPer"
# path = "benches/Chap43Claude/BenchOrderedSetStPer.rs"
# harness = false

[[bench]]
name = "BenchOrderedSetStEph"
path = "benches/Chap43Claude/BenchOrderedSetStEph.rs"
harness = false

[[bench]]
name = "BenchOrderedSetMtEph"
path = "benches/Chap43Claude/BenchOrderedSetMtEph.rs"
harness = false

# [[bench]]
# name = "BenchOrderedTableStPer"
# path = "benches/Chap43Claude/BenchOrderedTableStPer.rs"
# harness = false

[[bench]]
name = "BenchOrderedTableStEph"
path = "benches/Chap43Claude/BenchOrderedTableStEph.rs"
harness = false

[[bench]]
name = "BenchOrderedTableMtEph"
path = "benches/Chap43Claude/BenchOrderedTableMtEph.rs"
harness = false

[[bench]]
name = "BenchHashTables"
path = "benches/Chap47/BenchHashTables.rs"
harness = false

[[bench]]
name = "BenchAdvancedProbing"
path = "benches/Chap47/BenchAdvancedProbing.rs"
harness = false

# Chapter 49: Dynamic Programming - Subset Sum and Minimum Edit Distance
[[test]]
name = "TestSubsetSum"
path = "tests/TestSubsetSum.rs"

[[test]]
name = "TestMinEditDist"
path = "tests/TestMinEditDist.rs"

[[test]]
name = "TestOptBinSearchTree"
path = "tests/TestOptBinSearchTree.rs"

[[test]]
name = "TestMatrixChain"
path = "tests/TestMatrixChain.rs"

[[test]]
name = "TestBottomUpDPStPer"
path = "tests/Chap51/TestBottomUpDPStPer.rs"

[[test]]
name = "TestBottomUpDPStEph"
path = "tests/Chap51/TestBottomUpDPStEph.rs"

[[test]]
name = "TestBottomUpDPMtPer"
path = "tests/Chap51/TestBottomUpDPMtPer.rs"

[[test]]
name = "TestBottomUpDPMtEph"
path = "tests/Chap51/TestBottomUpDPMtEph.rs"

[[test]]
name = "TestTopDownDPStPer"
path = "tests/Chap51/TestTopDownDPStPer.rs"

[[test]]
name = "TestTopDownDPStEph"
path = "tests/Chap51/TestTopDownDPStEph.rs"

[[test]]
name = "TestTopDownDPMtPer"
path = "tests/Chap51/TestTopDownDPMtPer.rs"

[[test]]
name = "TestTopDownDPMtEph"
path = "tests/Chap51/TestTopDownDPMtEph.rs"

# Chapter 52: Graph Representations
[[test]]
name = "TestEdgeSetGraphStPer"
path = "tests/Chap52/TestEdgeSetGraphStPer.rs"

[[test]]
name = "TestEdgeSetGraphStEph"
path = "tests/Chap52/TestEdgeSetGraphStEph.rs"

[[test]]
name = "TestEdgeSetGraphMtPer"
path = "tests/Chap52/TestEdgeSetGraphMtPer.rs"

[[test]]
name = "TestEdgeSetGraphMtEph"
path = "tests/Chap52/TestEdgeSetGraphMtEph.rs"

[[test]]
name = "TestAdjTableGraphStPer"
path = "tests/Chap52/TestAdjTableGraphStPer.rs"

[[test]]
name = "TestAdjTableGraphStEph"
path = "tests/Chap52/TestAdjTableGraphStEph.rs"

[[test]]
name = "TestAdjTableGraphMtPer"
path = "tests/Chap52/TestAdjTableGraphMtPer.rs"

[[test]]
name = "TestGraphSearchStPer"
path = "tests/Chap53/TestGraphSearchStPer.rs"

[[test]]
name = "TestPQMinStPer"
path = "tests/Chap53/TestPQMinStPer.rs"

[[test]]
name = "TestPQMinMtEph"
path = "tests/Chap53/TestPQMinMtEph.rs"

[[bench]]
name = "BenchGraphSearchStPer"
path = "benches/Chap53/BenchGraphSearchStPer.rs"
harness = false

[[bench]]
name = "BenchPQMinStPer"
path = "benches/Chap53/BenchPQMinStPer.rs"
harness = false

[[bench]]
name = "BenchPQMinMtEph"
path = "benches/Chap53/BenchPQMinMtEph.rs"
harness = false

[[bench]]
name = "BenchEdgeSetGraphStPer"
path = "benches/Chap52/BenchEdgeSetGraphStPer.rs"
harness = false

[[bench]]
name = "BenchAdjTableGraphStPer"
path = "benches/Chap52/BenchAdjTableGraphStPer.rs"
harness = false

[[bench]]
name = "BenchSubsetSum"
path = "benches/BenchSubsetSum.rs"
harness = false

[[bench]]
name = "BenchOptBinSearchTree"
path = "benches/BenchOptBinSearchTree.rs"
harness = false

[[bench]]
name = "BenchMatrixChain"
path = "benches/BenchMatrixChain.rs"
harness = false

[[bench]]
name = "BenchBottomUpDPStPer"
path = "benches/Chap51/BenchBottomUpDPStPer.rs"
harness = false

[[bench]]
name = "BenchBottomUpDPStEph"
path = "benches/Chap51/BenchBottomUpDPStEph.rs"
harness = false

[[bench]]
name = "BenchBottomUpDPMtPer"
path = "benches/Chap51/BenchBottomUpDPMtPer.rs"
harness = false

[[bench]]
name = "BenchBottomUpDPMtEph"
path = "benches/Chap51/BenchBottomUpDPMtEph.rs"
harness = false

[[bench]]
name = "BenchTopDownDPStPer"
path = "benches/Chap51/BenchTopDownDPStPer.rs"
harness = false

[[bench]]
name = "BenchTopDownDPStEph"
path = "benches/Chap51/BenchTopDownDPStEph.rs"
harness = false

[[bench]]
name = "BenchTopDownDPMtPer"
path = "benches/Chap51/BenchTopDownDPMtPer.rs"
harness = false

[[bench]]
name = "BenchTopDownDPMtEph"
path = "benches/Chap51/BenchTopDownDPMtEph.rs"
harness = false

[[bench]]
name = "BenchMinEditDist"
path = "benches/BenchMinEditDist.rs"
harness = false

# Chapter 50: Optimal Binary Search Trees and Matrix Chain Product (TEMPORARILY COMMENTED OUT)
# Fundamental trait bound issues: KeyProb<T> needs T: MtT for Eq, but we use MtVal bounds
# OrderedFloat<f64> doesn't satisfy MtT. ArraySeqMtEph/MtPer APIs incompatible. Requires rewrite.
# [[test]]
# name = "TestOBST"
# path = "tests/TestOBST.rs"

# [[test]]
# name = "TestMatrixChain"
# path = "tests/TestMatrixChain.rs"

# [[bench]]
# name = "BenchOBST"
# path = "benches/BenchOBST.rs"
# harness = false

# [[bench]]
# name = "BenchMatrixChain"
# path = "benches/BenchMatrixChain.rs"
# harness = false

# Chapter 51: Implementing Dynamic Programming (TEMPORARILY COMMENTED OUT)
# [[test]]
# name = "TestBottomUpDP"
# path = "tests/TestBottomUpDP.rs"

# [[test]]
# name = "TestTopDownDP"
# path = "tests/TestTopDownDP.rs"

# [[bench]]
# name = "BenchBottomUpDP"
# path = "benches/BenchBottomUpDP.rs"
# harness = false

# [[bench]]
# name = "BenchTopDownDP"
# path = "benches/BenchTopDownDP.rs"
# harness = false

